// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button to be enabled, and spinner to not be present when not submitting 1`] = `
<div>
  <button
    className="btn btn--primary margin-top--1"
    disabled={false}
    type="submit"
  >
    Sign in
  </button>
  
</div>
`;

exports[`Button to be enabled, and spinner to not be present when submitting 1`] = `
<div>
  <button
    className="btn btn--primary margin-top--1"
    disabled={true}
    type="submit"
  >
    Sign in
  </button>
  <div
    className="form__loader loader loader--dark margin-left--1"
  />
</div>
`;
